feat: atualização do swagger e fixes de rotas
