# src/infrastructure/routes/OrganizerRoutes.ts
@@ -23,6 +23,6 @@ organizerRouter.use('/locals', localRouter.router);
 organizerRouter.use('/lists', listRouter.router);
 organizerRouter.use('/list-players', listPlayerRouter.router);
 organizerRouter.use('/group-members', groupMemberRouter.router);
-organizerRouter.use('/guest', GuestRoute.router);
+organizerRouter.use('/guests', GuestRoute.router);
 
 export default organizerRouter;
